# AO3-Item-Manager

./: .gitignore  README.md  Tutorial.md  main.py  pyproject.toml  settings.json
Menu/: home_nav.py  info.py  login.py
ao3_api_collection_management/AO3/: collections.py  session.py
ao3_api_collection_management/ao3_api.egg-info/: PKG-INFO  SOURCES.txt
im_menu/: errors.py  home_nav.py  info.py  itemManager.py  login.py  obfuscateNote.md  settings_menu.py
plans/: Menu Hierarchy  Plans List
