[tool.poetry]
name = "repl_python3_AO3-Item-Manager-1"
version = "0.1.0"
description = ""
authors = ["LordGiacomoS <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
bs4 = "^0.0.1"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
